<resources>
    <string name="app_name">SmartFleet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SmarterDrivers</string>
    <string name="nav_header_subtitle">FSE501</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_dash">Dashboard</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_GPS">GPS</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_maint">Maintenance</string>

    <string name="home_add_vehicle">Add Vehicle</string>
    <string name="home_add_driver">Add Driver</string>
    <string name="home_add_vender">Add Vender</string>
    <string name="home_add_event">Add Event</string>
    <string name="home_scanQR">Scan Vehicle Tag</string>
    <string name="home_service">Log Service</string>

    <string name="asset_3">Asset 3</string>
    <string name="asset_2">Asset 2</string>
    <string name="asset_1">Asset 1</string>

    <string name="asset_tag">Asset Tag</string>
    <string name="license_plate">License Plate</string>
    <string name="insurance">Insurance</string>
    <string name="warranty">Warranty</string>
    <string name="next_service">Next Service</string>
    <string name="vin">VIN</string>
    <string name="driver_id">Driver ID</string>
    <string name="maintenance_budget">Maintenance Budget</string>
    <string name="part_recommendation">Part Recommendation</string>
    <string name="forecasted_loss">Forecasts</string>
    <string name="repair_shop_discounts">Repair Shop Discounts</string>
    <string name="use_of_programming_languages_in_percentage">Expenditure By Type:</string>
    <string name="r">Fuel</string>
    <string name="python">Preventative Maintenance</string>
    <string name="c">Unscheduled Repair</string>
    <string name="java">Misc</string>

    <string name="rec_one">Use 5w20 Oil + 5% fuel eff</string>
    <string name="rec_two">Toyo M122 for + 10K miles</string>
    <string name="rec_three">Bosch BC906 Pads + 6 mo</string>
    <string name="rec_four">K N Cabin Air + 2% fuel eff</string>

    <string name="part1">ID 0001</string>
    <string name="part2">ID 0004</string>
    <string name="part3">ID 0002</string>
    <string name="part4">ID 0003</string>

</resources>